Show Physical Web zero-suggest omnibox suggestions after query is deleted

The Physical Web omnibox provider provides suggestions when the user first
focuses the omnibox (zero-suggest) as well as after the user begins typing
a query (query suggest). This CL will allow PW zero-suggest suggestions to
be shown when the user has begun typing a query and then deleted it.

BUG=680505

Review-Url: https://codereview.chromium.org/2657473003
Cr-Commit-Position: refs/heads/master@{#446193}

Former-commit-id: cac0db7f354b8187b4932f1131d3701c5197d71b